# libtrack-cpp

./: CMakeLists.txt  README.md
include/app/: LibraryService.hpp
include/domain/: Book.hpp  Loan.hpp  Member.hpp
include/infra/: BookRepository.hpp  CsvUtils.hpp  FileRepository.hpp  IRepository.hpp  LoanRepository.hpp  MemberRepository.hpp
include/ui/: ConsoleUI.hpp
include/utils/: DateUtils.hpp  StringUtils.hpp
src/: main.cpp
src/app/: LibraryService.cpp
src/gui/: BookListPanel.cpp  GuiApp.cpp  MainFrame.cpp
src/infra/: BookRepository.cpp  CsvUtils.cpp  FileRepository.cpp  LoanRepository.cpp  MemberRepository.cpp
src/ui/: ConsoleUI.cpp
tests/: test_persistence.cpp
